better handle of per cluster projects