@@ -38,7 +38,7 @@ public class AwsKubeconfigAction
 
         String awsKubeconfigScriptFunction = "awsKubeconfig";
         if (cliOperationContext.cliApp().isTestMode()) {
-            System.out.println("Executing action: %s".formatted(awsKubeconfigScriptFunction));
+            System.out.println(String.format("Executing action: %s", awsKubeconfigScriptFunction));
             return 0;
         }
 
